src-tauri/error_log.txt
    Checking ai-singularity v0.1.0 (D:\Code\Tauri\AI Singularity\src-tauri)
warning: unused import: `anyhow::Result`
 --> src\db.rs:1:5
  |
1 | use anyhow::Result;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused imports: `Request`, `Response`, and `body::Body`
  --> src\proxy\server.rs:11:5
   |
11 |     body::Body,
   |     ^^^^^^^^^^
12 |     extract::State,
13 |     http::{Request, Response, StatusCode},
   |            ^^^^^^^  ^^^^^^^^

warning: unused import: `Stream`
  --> src\proxy\server.rs:18:34
   |
18 | use futures::stream::{StreamExt, Stream};
   |                                  ^^^^^^

warning: unused import: `std::sync::Arc`
 --> src\services\balance_tracker.rs:1:5
  |
1 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused imports: `error`, `info`, and `warn`
 --> src\services\balance_tracker.rs:5:15
  |
5 | use tracing::{info, warn, error};
  |               ^^^^  ^^^^  ^^^^^

warning: unused import: `AppError`
 --> src\services\balance_tracker.rs:9:20
  |
9 | use crate::error::{AppError, AppResult};
  |                    ^^^^^^^^

warning: unused import: `ProviderCategory`
 --> src\services\provider.rs:2:47
  |
2 | use crate::models::{ProviderConfig, Platform, ProviderCategory};
  |                                               ^^^^^^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> src\services\mcp.rs:6:5
  |
6 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `KeyStatus`
 --> src\services\alert.rs:2:44
  |
2 | use crate::models::{AlertItem, AlertLevel, KeyStatus};
  |                                            ^^^^^^^^^

warning: unused import: `rusqlite::params`
 --> src\services\alert.rs:4:5
  |
4 | use rusqlite::params;
  |     ^^^^^^^^^^^^^^^^

warning: unused import: `warn`
 --> src\services\skill.rs:5:21
  |
5 | use tracing::{info, warn, error};
  |                     ^^^^

warning: unused import: `Path`
 --> src\services\session_manager.rs:3:26
  |
3 | use std::path::{PathBuf, Path};
  |                          ^^^^

warning: unused import: `std::sync::Arc`
 --> src\services\user_token.rs:6:5
  |
6 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `models::ApiKey`
 --> src\store.rs:1:13
  |
1 | use crate::{models::ApiKey, AppError, AppResult};
  |             ^^^^^^^^^^^^^^

warning: unused imports: `AeadCore`, `Aead`, `Aes256Gcm`, `Nonce`, and `OsRng`
 --> src\store.rs:3:12
  |
3 |     aead::{Aead, AeadCore, KeyInit, OsRng},
  |            ^^^^  ^^^^^^^^           ^^^^^
4 |     Aes256Gcm, Nonce,
  |     ^^^^^^^^^  ^^^^^

warning: unused imports: `Engine` and `engine::general_purpose::STANDARD`
 --> src\store.rs:6:14
  |
6 | use base64::{engine::general_purpose::STANDARD, Engine};
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^

warning: use of deprecated type alias `std::panic::PanicInfo`: use `PanicHookInfo` instead
 --> src\panic_hook.rs:5:17
  |
5 | use std::panic::PanicInfo;
  |                 ^^^^^^^^^
  |
  = note: `#[warn(deprecated)]` on by default

warning: use of deprecated type alias `std::panic::PanicInfo`: use `PanicHookInfo` instead
  --> src\panic_hook.rs:12:54
   |
12 |     std::panic::set_hook(Box::new(move |panic_info: &PanicInfo<'_>| {
   |                                                      ^^^^^^^^^

warning: unused variable: `db`
  --> src\commands\proxy.rs:21:5
   |
21 |     db: State<'_, Database>,
   |     ^^ help: if this is intentional, prefix it with an underscore: `_db`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: unreachable pattern
   --> src\services\oauth.rs:848:17
    |
818 |                 _ => {
    |                 - matches any value
...
848 |                 "codex" => {
    |                 ^^^^^^^ no value can reach this
    |
    = note: `#[warn(unreachable_patterns)]` on by default

warning: unreachable pattern
   --> src\services\oauth.rs:875:17
    |
818 |                 _ => {
    |                 - matches any value
...
875 |                 "kiro" => {
    |                 ^^^^^^ no value can reach this

warning: unreachable pattern
   --> src\services\oauth.rs:904:17
    |
818 |                 _ => {
    |                 - matches any value
...
904 |                 "trae" => {
    |                 ^^^^^^ no value can reach this

warning: unreachable pattern
   --> src\services\oauth.rs:930:17
    |
818 |                 _ => {
    |                 - matches any value
...
930 |                 "zed" => {
    |                 ^^^^^ no value can reach this

error[E0063]: missing field `sort_order` in initializer of `ProviderConfig`
  --> src\services\stream_check.rs:36:17
   |
36 |                 ProviderConfig {
   |                 ^^^^^^^^^^^^^^ missing `sort_order`

warning: unused import: `KeyInit`
 --> src\store.rs:3:28
  |
3 |     aead::{Aead, AeadCore, KeyInit, OsRng},
  |                            ^^^^^^^

warning: unused variable: `name`
  --> src\services\session_manager.rs:46:17
   |
46 |             let name = process.name().to_string_lossy().to_string().to_lowercase();
   |                 ^^^^ help: if this is intentional, prefix it with an underscore: `_name`

warning: variable does not need to be mutable
  --> src\services\user_token.rs:23:13
   |
23 |         let mut id = Uuid::new_v4().to_string();
   |             ----^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

warning: variable does not need to be mutable
  --> src\services\user_token.rs:24:13
   |
24 |         let mut token_str = Self::generate_sk_token();
   |             ----^^^^^^^^^
   |             |
   |             help: remove this `mut`

For more information about this error, try `rustc --explain E0063`.
warning: `ai-singularity` (lib) generated 27 warnings
error: could not compile `ai-singularity` (lib) due to 1 previous error; 27 warnings emitted
